--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,24 +25,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Used languages
-        uses: lowlighter/metrics@latest
+        uses: lowlighter/metrics@65836723097537a54cd8eb90f61839426b4266b6
         with:
           filename: metrics.plugin.languages.details.svg
-          token: ${{ secrets.METRICS_TOKEN || github.token }}
+          token: ${{ secrets.METRICS_TOKEN }}
           output_action: commit
           base: ""
           plugin_languages: "yes"
-          plugin_languages_indepth: "yes"
+          plugin_languages_indepth: "no"
           plugin_languages_limit: 8
           plugin_languages_details: bytes-size, percentage
-
-      - name: Coding habits
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.habits.facts.svg
-          token: ${{ secrets.METRICS_TOKEN || github.token }}
-          output_action: commit
-          base: ""
-          plugin_habits: "yes"
-          plugin_habits_facts: "yes"
-          plugin_habits_charts: "no"
