--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,7 +31,10 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           output_action: commit
           base: ""
+          config_display: large
+          repositories_affiliations: owner, collaborator, organization_member
           plugin_languages: "yes"
           plugin_languages_indepth: "no"
           plugin_languages_limit: 8
+          plugin_languages_other: "yes"
           plugin_languages_details: bytes-size, percentage
