--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,14 +27,11 @@ jobs:
       - name: Used languages
         uses: lowlighter/metrics@65836723097537a54cd8eb90f61839426b4266b6
         with:
-          filename: metrics.plugin.languages.details.svg
+          filename: assets/workflowAssets/metrics.plugin.languages.details.svg
           token: ${{ secrets.METRICS_TOKEN }}
           output_action: commit
           base: ""
-          config_display: large
-          repositories_affiliations: owner, collaborator, organization_member
           plugin_languages: "yes"
           plugin_languages_indepth: "no"
           plugin_languages_limit: 8
-          plugin_languages_other: "yes"
           plugin_languages_details: bytes-size, percentage
